src/test/ui/suggestions/slice-issue-87994.stderr
error[E0277]: `[i32]` cannot be converted to an iterator
  --> $DIR/slice-issue-87994.rs:3:12
   |
LL |   for _ in v[1..] {
   |            ^^^^^^ `[i32]` cannot be converted to an iterator
   |
   = help: the trait `IntoIterator` is not implemented for `[i32]`
   = help: the following other types implement trait `IntoIterator`:
             &'a [T; N]
             &'a [T]
             &'a mut [T; N]
             &'a mut [T]
             [T; N]

error[E0277]: `[K]` cannot be converted to an iterator
  --> $DIR/slice-issue-87994.rs:11:13
   |
LL |   for i2 in v2[1..] {
   |             ^^^^^^^ `[K]` cannot be converted to an iterator
   |
   = help: the trait `IntoIterator` is not implemented for `[K]`
   = help: the following other types implement trait `IntoIterator`:
             &'a [T; N]
             &'a [T]
             &'a mut [T; N]
             &'a mut [T]
             [T; N]

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
